# stock_cfr

./: Cargo.toml  Test.ipynb  aapl.parquet
python_client/: client.py  warehouse.py
src/: main.rs
src/agent/: advantage.rs  buffer.rs  dataset.rs  deep_cfr.rs  layers.rs  mod.rs  policy.rs
src/env/: game.rs  mod.rs  state.rs  types.rs
