[package]
name = "stock_cfr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tch = "0.6.1"
ndarray = "0.15.4"
rand = "0.8.4"
ndarray-rand = "0.14.0"
chrono = "0.4.19"
arrow = "6.5.0"
parquet = "6.5.0"
ordered-float = "2.8.0"
bimap = "0.6.1"